--- a/src/VCL/Assets/css/vcl-theme.css
+++ b/src/VCL/Assets/css/vcl-theme.css
@@ -298,6 +298,62 @@
 }
 
 /* -------------------------------------------------------------------------
+ * Checkbox & Radio Styles
+ * ------------------------------------------------------------------------- */
+input[type="checkbox"],
+input[type="radio"] {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    width: 1rem;
+    height: 1rem;
+    border: 1px solid var(--color-vcl-border);
+    background-color: var(--color-vcl-surface);
+    cursor: pointer;
+    flex-shrink: 0;
+}
+
+input[type="checkbox"] {
+    border-radius: var(--radius-vcl-sm);
+}
+
+input[type="radio"] {
+    border-radius: 50%;
+}
+
+input[type="checkbox"]:checked,
+input[type="radio"]:checked {
+    background-color: var(--color-vcl-primary);
+    border-color: var(--color-vcl-primary);
+}
+
+input[type="checkbox"]:checked {
+    background-image: url("data:image/svg+xml,%3csvg viewBox='0 0 16 16' fill='white' xmlns='http://www.w3.org/2000/svg'%3e%3cpath d='M12.207 4.793a1 1 0 010 1.414l-5 5a1 1 0 01-1.414 0l-2-2a1 1 0 011.414-1.414L6.5 9.086l4.293-4.293a1 1 0 011.414 0z'/%3e%3c/svg%3e");
+    background-size: 100% 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+input[type="radio"]:checked {
+    background-image: url("data:image/svg+xml,%3csvg viewBox='0 0 16 16' fill='white' xmlns='http://www.w3.org/2000/svg'%3e%3ccircle cx='8' cy='8' r='3'/%3e%3c/svg%3e");
+    background-size: 100% 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+input[type="checkbox"]:focus,
+input[type="radio"]:focus {
+    outline: none;
+    box-shadow: 0 0 0 2px var(--color-vcl-surface), 0 0 0 4px var(--color-vcl-primary);
+}
+
+input[type="checkbox"]:disabled,
+input[type="radio"]:disabled {
+    opacity: 0.5;
+    cursor: not-allowed;
+}
+
+/* -------------------------------------------------------------------------
  * Label Styles
  * ------------------------------------------------------------------------- */
 .vcl-label {
